<resources>
    <string name="app_name">Coffee Ordering</string>
    <string name="choose_toppings">Choose Toppings:</string>
    <string name="cream">Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="_2">2</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="order">order</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="quantity">Quantity</string>
</resources>
