<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back"
    tools:context=".MainActivity">



    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/img"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_toppings"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="8dp"
        android:background="@drawable/border">

        <CheckBox
            android:id="@+id/checkbox_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"/>

        <CheckBox
            android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="6dp"
        android:background="@drawable/border">

        <Button
            android:id="@+id/decrease_id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/decrease"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/quantity_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:paddingLeft="16dp"
            android:textSize="26sp"/>

        <Button
            android:id="@+id/increase_id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/increase"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_gravity="center"
        android:padding="16dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="ORDER SUMMARY"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"/>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="8dp"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_whipped_cream"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/et_cream_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add chocolate?"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/et_chocolate_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/et_quantity_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="price: $"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/et_price_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="thank_you!"
            android:textAllCaps="true"
            android:textSize="23sp"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>